tests/error/func_arg_array_empty.gw
#! [contains] array must be empty
fun int[] my_func(int[2] i){}
